--- a/tensorflowbasics/tensors/indexing.ipynb
+++ b/tensorflowbasics/tensors/indexing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,122 @@
     "<br>\n",
     "- colons, <code>:</code>, are used for slices: <code>start:stop:step</code>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  1  2  3  5  8 13 21 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank_1_tensor = tf.constant([0,1,1,2,3,5,8,13,21,34])\n",
+    "print(rank_1_tensor.numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indexing with a scalar removes the axis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First: 0\n",
+      "Second: 1\n",
+      "Last: 34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"First:\", rank_1_tensor[0].numpy())\n",
+    "print(\"Second:\", rank_1_tensor[1].numpy())\n",
+    "print(\"Last:\", rank_1_tensor[-1].numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indexing with a <code>:</code> slice keeps the axis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "everything: [ 0  1  1  2  3  5  8 13 21 34]\n",
+      "Before 4: [0 1 1 2]\n",
+      "From 4 to the end: [ 3  5  8 13 21 34]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"everything:\",rank_1_tensor[:].numpy())\n",
+    "print(\"Before 4:\", rank_1_tensor[:4].numpy())\n",
+    "print(\"From 4 to the end:\", rank_1_tensor[4:].numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ye u get the idea "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><b>Multi axis indexing</b></h1>\n",
+    "<br>Higher rank tensors are indexed by passing multiple indices.\n",
+    "<br>The exact same rules as in the single-axis case apply to each axis independently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "rank_2_tensor = tf.constant([[1,2],\n",
+    "                             [2,3],\n",
+    "                             [4,5],\n",
+    "                             [6,7]])\n",
+    "print(\"Second row:\", rank_2_tensor[1,:].numpy())\n",
+    "print(\"Second column:\", rank_2_tensor[:,1].numpy())"
+   ]
   }
  ],
  "metadata": {
@@ -33,8 +149,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4 (v3.11.4:d2340ef257, Jun  6 2023, 19:15:51) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
