started keras tut, finished tensor

--- a/tensorflowbasics/tensors/gradanddiff.ipynb
+++ b/tensorflowbasics/tensors/gradanddiff.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,164 @@
     "import matplotlib as plt\n",
     "import tensorflow as tf"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TensorFlow provides the <code>tf.GradientTape</code> API for automatic differentiation; that is, computing the gradient of a computation with respect to some inputs, usually <code>tf.Variables</code>. TensorFlow \"records\" relevant operations executed inside the context of a tf.GradientTape onto a \"tape\". TensorFlow then uses that tape to compute the gradients of a \"recorded\" computation using reverse mode differentiation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.Variable(3.0)\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    y = x**2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use <code>GradientTape.gradient(target,sources)</code> to calculate the gradient of some targe(often a loss)  relative to some source(often the model's variables):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "dy_dx = tape.gradient(y, x)\n",
+    "dy_dx.numpy()\n",
+    "print(dy_dx.numpy())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above example uses scalars, but <code>tf.GradientTape</code> works as easily on any tensor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'w:0' shape=(3, 2) dtype=float32, numpy=\n",
+      "array([[-0.19012986, -0.64281493],\n",
+      "       [ 1.9111147 , -0.10302108],\n",
+      "       [ 1.3378382 ,  1.6591442 ]], dtype=float32)>\n",
+      "<tf.Variable 'b:0' shape=(2,) dtype=float32, numpy=array([0., 0.], dtype=float32)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = tf.Variable(tf.random.normal((3,2)),name='w')\n",
+    "b = tf.Variable(tf.zeros(2,dtype=tf.float32),name = 'b')\n",
+    "x = [[1.,2.,3.]]\n",
+    "print(w)\n",
+    "print(b)\n",
+    "\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    y = x @ w  + b \n",
+    "    loss = tf.reduce_mean(y**2)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><b>Gradients with respect to model</b></h1>\n",
+    "<br>\n",
+    "Its common to collect <code>tf.Variables</code> into a <code>tf.Module</code> or one of its subclasses (<code>layers.Layer</code>,<code>keras.Model</code>) for checkpointing and exporting.\n",
+    "\n",
+    "<br>\n",
+    "In most cases, you will want to calculate gradients with respect to a model's  trainable variables. Since all subclasses of <code>tf.Module</code> aggregate their variables in the <code>Module.trainable_variables</code> property, you can caulculate these gradients in a few lines of code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = tf.keras.layers.Dense(2, activation='relu')\n",
+    "x = tf.constant([[1.,2.,3.,]])\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    y = layer(x)\n",
+    "    loss = tf.reduce_mean(y**2)\n",
+    "\n",
+    "grad = tape.gradient(loss, layer.trainable_variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dense_1/kernel:0, shape: (3, 2)\n",
+      "dense_1/bias:0, shape: (2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for var, g in zip(layer.trainable_variables, grad):\n",
+    "    print(f'{var.name}, shape: {g.shape}')"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
